# Guitar-Transmitter

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  data.v12.txt  docker-compose.yaml  platformio.ini
.devcontainer/: Dockerfile
docs/: docker-compose.yaml  picoprobe_macos.md
docs/documentation/: 01_Cover.md  02_Abstract.md  03_Introduction.md  04_Problem.md  05_Test_Environment.md  06_Project_Design.md  07_Result.md  08_Conclusion.md  build.sh
lib/: CMakeLists.txt  README
lib/AudioPayload/: CMakeLists.txt
lib/AudioPayload/include/: AudioPayload.h
lib/FreeRTOSConfig/: CMakeLists.txt
lib/FreeRTOSConfig/include/: FreeRTOSConfig.h
lib/nrf24l01/: CMakeLists.txt
lib/nrf24l01/include/: nrf24l01.h
lib/nrf24l01/src/: nrf24l01.c
receiver/: CMakeLists.txt
receiver/src/: main.c  main.cpp
receiver/src/player/: Player.cpp  Player.h
receiver/src/receiver/: Receiver.cpp  Receiver.h
src/: main.c  main.cpp
tools/: plotter.py
transmitter/: CMakeLists.txt
transmitter/signal_acquisition/: CMakeLists.txt
transmitter/signal_acquisition/include/: signal_acq.h
transmitter/signal_acquisition/src/: signal_acq.c
transmitter/src/: main.c  main.cpp
transmitter/src/signal_acquisition/: signal_acq.cpp  signal_acq.h
transmitter/src/transmitter/: Transmitter.cpp  Transmitter.h
tuner/: CMakeLists.txt
tuner/src/: main.cpp
tuner/src/kissfft/: CMakeLists.txt
tuner/src/signal_acquisition/: signal_acq.cpp  signal_acq.h
tuner/src/yin/: CMakeLists.txt
